--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "type": "module",
+  "homepage": "https://bjalon.github.io/zustand",
   "dependencies": {
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
@@ -15,7 +16,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "gh-pages": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +26,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
